# api_101

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  train_model.ipynb  train_model.py  usar_modelo.py  use_model.py
data/01_raw/: Horse Racing Results.CSV
data/02_processed/: clean_Horse Racing Results.CSV
model/: model.pkl  rank_model.pkl
notebooks/: 01_data_acquisition.ipynb
