[tool.poetry]
name = "api_basic"
version = "0.1.0"
description = ""
authors = ["victdreis <victoria.dias.reiss@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.9.0"
click = "8.1.8"
Flask = "3.1.0"
importlib-metadata = "8.5.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.5"
joblib = "1.4.2"
MarkupSafe = "3.0.2"
numpy = "2.0.2"
pandas = "2.2.3"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
scikit-learn = "1.6.0"
scipy = "1.13.1"
six = "1.17.0"
threadpoolctl = "3.5.0"
tzdata = "2024.2"
Werkzeug = "3.1.3"
zipp = "3.21.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
